@@ -7,6 +7,11 @@ What's New in Python 2.7.2?
 
 *Release date: 2011-06-XX*
 
+Extension Modules
+-----------------
+
+- Issue #1221: Make pyexpat.__version__ equal to the Python version.
+
 
 What's New in Python 2.7.2 release candidate 1?
 ===============================================
